fixed bottom bar collapse sizing error

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -239,8 +239,6 @@ a.nav-expander.fixed {
   width: 100%;
   height: 3px;
   background-color: gray;
-  z-index:500;
-  float:top;
   cursor: row-resize
 }
 
